syntax = "proto3";

package rider;

import "google/protobuf/timestamp.proto";

option go_package = "lastmile/gen/go/rider";

message Rider {
  string id = 1;
  string name = 2;
  string destination = 3;
  google.protobuf.Timestamp arrival_time = 4;
}

message Ride {
    string id = 1;
    string rider_id = 2;
    string driver_id = 3;
    string status = 4;
}

message RegisterRiderRequest {
  Rider rider = 1;
}

message RegisterRiderResponse {
  string id = 1;
}

message TrackRideRequest {
    string ride_id = 1;
}

message TrackRideResponse {
    Ride ride = 1;
}

service RiderService {
  rpc RegisterRider(RegisterRiderRequest) returns (RegisterRiderResponse);
  rpc TrackRide(TrackRideRequest) returns (TrackRideResponse);
}
